# persian-silver

./: .gitignore  CMakeLists.txt
include/: action.hpp  asset.hpp  board.hpp  building.hpp  game.hpp  info.hpp  piece.hpp  player.hpp  resource.hpp  screen.hpp  tile.hpp  tile_old.hpp  ui.hpp  unit.hpp  util.hpp
src/: action.cpp  asset.cpp  board.cpp  building.cpp  game.cpp  info.cpp  main.cpp  piece.cpp  player.cpp  resource.cpp  screen.cpp  tile.cpp  tile_old.cpp  ui.cpp  unit.cpp
